--- a/temp-chart.css
+++ b/temp-chart.css
@@ -129,3 +129,18 @@
   padding-top: 4px;
   padding-left: 3px;
 }
+
+@media (max-width: 656px) { 
+  .temp-chart {
+    gap: 0;
+    top: 70px
+  }
+  
+  .scroll-left {
+    display: none;
+  }
+  
+  .scroll-right {
+    display: none;
+  }
+}
