--- a/index.css
+++ b/index.css
@@ -831,9 +831,14 @@ ul li {
 @media (max-width: 656px) {
  .headline {
     top: 42px;
+    width: 650px;
 } 
 
 .question{
+  font-size:  calc((54/ 656) * 100vw);
+}
+
+.today {
   font-size:  calc((54/ 656) * 100vw);
 }
 
@@ -873,7 +878,7 @@ ul li {
     align-items:flex-start;
     justify-content:space-between;
     padding: 0;
-    margin: 0;
+    margin-top: calc((68/ 656) * 100vw);
     gap: 0;
   } 
 
