--- a/index.css
+++ b/index.css
@@ -1,31 +1,31 @@
 @font-face {
-  font-family: 'Gotham Condensed Book';
-  src: url('./fonts/GothamCond-Book.otf') format("opentype");
+  font-family: "Gotham Condensed Book";
+  src: url("./fonts/GothamCond-Book.otf") format("opentype");
 }
 @font-face {
-  font-family: 'Gotham Condensed Bold';
-  src: url('./fonts/GothamCond-Bold.otf') format("opentype");
+  font-family: "Gotham Condensed Bold";
+  src: url("./fonts/GothamCond-Bold.otf") format("opentype");
   font-weight: 700;
 }
 @font-face {
-  font-family: 'Gotham Narrow Black';
-  src: url('./fonts/GothamXNarrow-Black-Bold.otf') format("opentype");
+  font-family: "Gotham Narrow Black";
+  src: url("./fonts/GothamXNarrow-Black-Bold.otf") format("opentype");
 }
 @font-face {
-  font-family: 'Gotham Narrow Medium';
-  src: url('./fonts/GothamXNarrow-Medium.otf') format("opentype");
+  font-family: "Gotham Narrow Medium";
+  src: url("./fonts/GothamXNarrow-Medium.otf") format("opentype");
 }
 @font-face {
-  font-family: 'Gotham Narrow Light';
-  src: url('./fonts/GothamXNarrow-Light.otf') format("opentype");
+  font-family: "Gotham Narrow Light";
+  src: url("./fonts/GothamXNarrow-Light.otf") format("opentype");
 }
 @font-face {
-  font-family: 'Gotham Narrow Book';
-  src: url('./fonts/GothamXNarrow-Book.otf') format("opentype");
+  font-family: "Gotham Narrow Book";
+  src: url("./fonts/GothamXNarrow-Book.otf") format("opentype");
 }
 @font-face {
-  font-family: 'Gotham Narrow Bold';
-  src: url('./fonts/GothamXNarrow-Bold.otf') format("opentype");
+  font-family: "Gotham Narrow Bold";
+  src: url("./fonts/GothamXNarrow-Bold.otf") format("opentype");
 }
 
 :root {
@@ -48,7 +48,7 @@
 
 html,
 body {
- max-height: 327px;
+  max-height: 327px;
 }
 
 body {
@@ -79,33 +79,33 @@ body {
 
 .search-container {
   position: relative;
-  }
+}
 
 .search {
-    --font-size: calc(var(--fs-base) * 2.5);
-    --padding-y: 0;
-    --padding-x: 0.25em;
-    --icon-size: calc(var(--font-size) * 0.75);
-    --input-width: 12ch;
-    display: flex;
-    align-items: stretch;
-    left: 0;
-    position: absolute; 
-    overflow: hidden;
+  --font-size: calc(var(--fs-base) * 2.5);
+  --padding-y: 0;
+  --padding-x: 0.25em;
+  --icon-size: calc(var(--font-size) * 0.75);
+  --input-width: 12ch;
+  display: flex;
+  align-items: stretch;
+  left: 0;
+  position: absolute;
+  overflow: hidden;
 }
 
 .search-input {
-    --input-width: 12ch;
-    font-size: var(--font-size);
-    line-height: 1;
-    padding: var(--padding-y) var(--padding-x);
-    font-family: "Gotham Condensed Bold";
-    background-color: var(--clr-red);
-    color: var(--clr-white);
-    border: none;
-    width: auto; 
-    min-width: 4ch; 
-    max-width: 30ch; 
+  --input-width: 12ch;
+  font-size: var(--font-size);
+  line-height: 1;
+  padding: var(--padding-y) var(--padding-x);
+  font-family: "Gotham Condensed Bold";
+  background-color: var(--clr-red);
+  color: var(--clr-white);
+  border: none;
+  width: auto;
+  min-width: 4ch;
+  max-width: 30ch;
 }
 
 .search-button {
@@ -130,7 +130,7 @@ body {
 }
 
 .vertical-line-bg {
-  background-color: var(--clr-red); 
+  background-color: var(--clr-red);
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
@@ -171,7 +171,7 @@ body {
 
 .question {
   --max-width: 35ch;
-  font-size: calc((30/ 992) * 100vw);
+  font-size: calc((30 / 992) * 100vw);
   max-width: var(--max-width);
   line-height: 1;
   text-align: center;
@@ -180,7 +180,7 @@ body {
 
 .subline {
   display: inline-block;
-  vertical-align: middle; 
+  vertical-align: middle;
   white-space: nowrap;
   align-items: center;
   line-height: 1;
@@ -188,11 +188,11 @@ body {
 }
 
 .today {
-  --font-size: calc((40/ 992) * 100vw);
-  --padding-x: calc((6/ 992) * 100vw);
+  --font-size: calc((40 / 992) * 100vw);
+  --padding-x: calc((6 / 992) * 100vw);
   --padding-y: 3px;
   --icon-size: calc(var(--font-size) * 0.4);
-  font-size:  var(--font-size);
+  font-size: var(--font-size);
   padding: var(--padding-y) var(--padding-x);
   color: var(--clr-white);
   background-color: var(--clr-red);
@@ -202,7 +202,7 @@ body {
   display: flex;
   align-items: center;
   gap: var(--gap);
- margin-inline: auto;
+  margin-inline: auto;
 }
 
 .today > svg {
@@ -211,7 +211,7 @@ body {
 
 #temperature {
   font-weight: 700;
-  font-family: 'Gotham Condensed Bold';
+  font-family: "Gotham Condensed Bold";
 }
 
 #tempImage {
@@ -225,7 +225,7 @@ body {
 }
 
 .swatches-container {
-  --font-size:  calc(20px - ((992px - 100vw) * 0.01));
+  --font-size: calc(20px - ((992px - 100vw) * 0.01));
   --gap-x: 1em;
   --swatch-width: 1.5em;
   --swatch-height: 2px;
@@ -234,7 +234,7 @@ body {
   align-items: center;
   justify-content: center;
   flex-wrap: wrap;
-  gap: 0 var(--gap-x);   
+  gap: 0 var(--gap-x);
 }
 
 .swatch {
@@ -243,7 +243,7 @@ body {
 
 .swatch-row {
   display: flex;
-   align-items: center;
+  align-items: center;
 }
 
 .swatch-label {
@@ -253,31 +253,30 @@ body {
 .swatch-red,
 .swatch-blue,
 .swatch-transparent {
-  width: 27.94px;     
-  height: 19.79px;     
+  width: 27.94px;
+  height: 19.79px;
   margin-right: 0.25em;
   position: relative;
   display: flex;
   justify-content: center;
-  align-items: center;     
+  align-items: center;
 }
 
-
 .swatch-red {
-  background-color: transparent;  
-  width: 27.94px;  
+  background-color: transparent;
+  width: 27.94px;
 }
 
 .swatch-red::before {
-  content: '';
-  width: 27.94px;  
-  height: 2px; 
-  background-color: var(--clr-red); 
+  content: "";
+  width: 27.94px;
+  height: 2px;
+  background-color: var(--clr-red);
 }
 
 .swatch-blue {
-  background-color: var(--clr-navy-light); 
-  border-top: 3px solid var(--clr-navy);   
+  background-color: var(--clr-navy-light);
+  border-top: 3px solid var(--clr-navy);
 }
 
 .swatch-transparent {
@@ -313,7 +312,7 @@ body {
 }
 
 .modal-title {
-  font-family: 'Gotham Condensed Bold';
+  font-family: "Gotham Condensed Bold";
   font-weight: 700;
   font-size: 4rem;
   text-align: center;
@@ -334,7 +333,7 @@ body {
   padding: 14.83px 19.77px 14.83px 19.77px;
   gap: 4.94px;
   border-radius: 10.26px;
-  font-family: 'Gotham Narrow Medium';
+  font-family: "Gotham Narrow Medium";
   background-image: url("./assets/icon.svg") center / contain no-repeat;
   font-weight: 400;
   font-size: 1.125rem;
@@ -357,7 +356,7 @@ body {
   border: none;
   justify-content: center;
   align-items: center;
-  font-family: 'Gotham Narrow Medium';
+  font-family: "Gotham Narrow Medium";
   font-weight: 700;
   font-size: 1.25rem;
   text-align: center;
@@ -372,7 +371,7 @@ body {
   opacity: 0px;
   background-color: #dd0000;
   border: none;
-  font-family: 'Gotham Narrow Medium';
+  font-family: "Gotham Narrow Medium";
   font-weight: 700;
   font-size: 1.25rem;
   color: #ffffff;
@@ -405,7 +404,7 @@ body {
   background-color: #fefefe;
   top: 9.17vh;
   left: 2.52vw;
-  right:  2.52vw;
+  right: 2.52vw;
   flex-direction: column;
   border-radius: 20px;
 }
@@ -418,7 +417,7 @@ body {
 }
 
 .info-title {
-  font-family: 'Gotham Condensed Bold';
+  font-family: "Gotham Condensed Bold";
   font-size: 40px;
   font-weight: 700;
   line-height: 56.26px;
@@ -429,7 +428,7 @@ body {
   font-size: 21px;
   line-height: 27.3px;
   margin-top: 28px;
-  font-family: 'Gotham Narrow Book';
+  font-family: "Gotham Narrow Book";
   font-weight: 900;
 }
 
@@ -437,9 +436,8 @@ body {
   background-color: transparent;
   border: none;
   padding: 0;
-  margin:0
+  margin: 0;
 }
-
 
 .autocomplete-suggestions {
   position: absolute;
@@ -447,12 +445,12 @@ body {
   height: 200px;
   border: 1px solid #ccc;
   border-top: none;
-  background-color: #FFFFFF; 
-  color: #495057; 
+  background-color: #ffffff;
+  color: #495057;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
   max-height: 150px;
   overflow-y: auto;
-  z-index: 1000; 
+  z-index: 1000;
   list-style-type: none;
   padding: 10px;
   margin: 150px;
@@ -465,7 +463,8 @@ body {
   font-size: 25.32px;
 }
 
-.scroll-left, .scroll-right {
+.scroll-left,
+.scroll-right {
   gap: 0px;
   opacity: 0px;
   border: none;
@@ -480,8 +479,8 @@ body {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); 
-  z-index: 4; 
+  background-color: rgba(0, 0, 0, 0.5);
+  z-index: 4;
 }
 
 .search-page-container {
@@ -503,7 +502,7 @@ body {
 
 .search-page-header {
   color: #000000;
-  font-family: 'Gotham Condensed Bold';
+  font-family: "Gotham Condensed Bold";
   font-weight: 700;
   font-size: 4rem;
   margin: 0;
@@ -556,7 +555,7 @@ body {
   outline: none;
   font-size: 1rem;
   background: transparent;
-  font-family: 'Gotham Narrow Light';
+  font-family: "Gotham Narrow Light";
   font-weight: 400;
   font-size: 1.125rem;
   color: #212529;
@@ -576,7 +575,7 @@ body {
 }
 
 .input-field::placeholder {
-  font-family: 'Gotham Narrow Light';
+  font-family: "Gotham Narrow Light";
   font-weight: 400;
   font-size: 1.125rem;
   color: #212529;
@@ -605,7 +604,7 @@ body {
   left: 10px;
   font-size: 0.75rem;
   color: #212529;
-  font-family: 'Gotham Narrow Light';
+  font-family: "Gotham Narrow Light";
   font-weight: 400;
   background: #f3f2f2;
   padding: 0 5px;
@@ -613,7 +612,7 @@ body {
 
 .cancel-btn,
 .search-btn {
-  font-family: 'Gotham Narrow Medium';
+  font-family: "Gotham Narrow Medium";
   font-weight: 700;
   font-size: 1.25rem;
   padding: 0px 40.15px 0px 40.15px;
@@ -696,7 +695,7 @@ ul li {
 }
 
 .suggestion-element {
-  font-family: 'Gotham Narrow Light';
+  font-family: "Gotham Narrow Light";
   font-weight: 400;
   color: #495057;
   font-size: 1.125rem;
@@ -708,7 +707,7 @@ ul li {
   top: 103%;
   left: 6%;
   color: #dd0000;
-  font-family: 'Gotham Narrow Light';
+  font-family: "Gotham Narrow Light";
   font-weight: 400;
   font-size: 1.125rem;
   display: none;
@@ -790,73 +789,75 @@ ul li {
 
 @media (max-width: 991px) {
   .modal {
-    width: 100VW;
+    width: 100vw;
   }
-  
+
   .modal-items {
-    margin-top: calc((15 / 992) * 100vw);;
+    margin-top: calc((15 / 992) * 100vw);
   }
-  
+
   .modal-title {
     font-size: 2.5rem;
     width: 322px;
   }
-  
+
   .modal-input {
     width: calc((734 / 992) * 100vw);
     height: calc((59 / 992) * 100vw);
     margin-top: calc((30 / 992) * 100vw);
     left: calc((33 / 992) * 100vw);
-    font-size: calc((25.32/ 992) * 100vw);
+    font-size: calc((25.32 / 992) * 100vw);
   }
-  
+
   .modal-text {
     margin-top: calc((48.47 / 992) * 100vw);
   }
-  
+
   .modal-text-close {
     width: calc((340 / 992) * 100vw);
     height: calc((60 / 992) * 100vw);
-    margin-right: calc((54.55/ 992) * 100vw);
+    margin-right: calc((54.55 / 992) * 100vw);
   }
-  
+
   .modal-text-search {
     width: calc((340 / 992) * 100vw);
     height: calc((60 / 992) * 100vw);
-    border-radius: calc((9.99/ 992) * 100vw);
+    border-radius: calc((9.99 / 992) * 100vw);
   }
-} 
-
+}
 
 @media (max-width: 656px) {
   body {
-    aspect-ratio: 1 / 1;  
-    width: 100vw;        
-    height: auto;     
-    max-width: 656px;         
-    max-height: 656px;        
-    overflow: hidden;  
-   }
+    aspect-ratio: 1 / 1;
+    width: 100vw;
+    height: auto;
+    max-width: 656px;
+    max-height: 656px;
+    overflow: hidden;
+  }
 
- .headline {
-    top: 42px;
+  .headline {
+    top: calc((80 / 656) * 100vw);
     width: 650px;
-} 
+  }
 
-.question{
-  font-size:  calc((54/ 656) * 100vw);
-}
+  .question {
+    font-size: calc((54 / 656) * 100vw);
+  }
 
-.today {
-  font-size:  calc((54/ 656) * 100vw);
-}
+  .today {
+    font-size: calc((54 / 656) * 100vw);
+  }
 
-#tempImage {
-  width: calc((28 / 656) * 100vw);
-  height: calc((32 / 656) * 100vw);
-}
+  #tempImage {
+    width: calc((28 / 656) * 100vw);
+    height: calc((32 / 656) * 100vw);
+  }
 
-/*
+  .search-input {
+    font-size: calc((78 / 656) * 100vw);
+  }
+  /*
 .question{
     left: 0; 
     font-size:  calc((45/ 656) * 100vw);
@@ -878,22 +879,22 @@ ul li {
   } */
 
   .card-body {
-    padding: calc((140/ 656) * 100vw) 3em;
+    padding: calc((140 / 656) * 100vw) 3em;
     scale: 0.98;
     gap: 0;
   }
 
   .bottom-legend {
-    align-items:flex-start;
-    justify-content:space-between;
+    align-items: flex-start;
+    justify-content: space-between;
     padding: 0;
-    margin-top: calc((68/ 656) * 100vw);
-    gap: 0;
-  } 
+    margin-top: calc((100 / 656) * 100vw);
+    gap: 1;
+  }
 
   .swatch {
     display: flex;
-    align-items:flex-start;
+    align-items: flex-start;
     justify-content: flex-start;
     flex-direction: column;
   }
@@ -906,14 +907,15 @@ ul li {
   }
 
   .swatches-container {
-    align-items:flex-start;
-    justify-content:flex-start ;
+    align-items: flex-start;
+    justify-content: flex-start;
     flex-wrap: wrap;
     scale: 0.97;
+    font-size: calc((32 / 656) * 96vw);
   }
 
-  .swatch-blue, .swatch-transparent {
+  .swatch-blue,
+  .swatch-transparent {
     height: 13.67;
   }
 }
-
