--- a/index.css
+++ b/index.css
@@ -92,6 +92,7 @@ body {
   left: 0;
   position: absolute;
   overflow: hidden;
+  z-index: 1;
 }
 
 .search-input {
@@ -116,6 +117,7 @@ body {
   background-color: var(--clr-red);
   color: var(--clr-black);
   border: none;
+  
 }
 
 .input-warning {
