--- a/index.css
+++ b/index.css
@@ -2,27 +2,38 @@
   font-family: "Gotham Condensed Book";
   src: url("./fonts/GothamCond-Book.otf") format("opentype");
 }
+
 @font-face {
   font-family: "Gotham Condensed Bold";
   src: url("./fonts/GothamCond-Bold.otf") format("opentype");
   font-weight: 700;
 }
+
 @font-face {
   font-family: "Gotham Narrow Black";
   src: url("./fonts/GothamXNarrow-Black-Bold.otf") format("opentype");
 }
-@font-face {
-  font-family: "Gotham Narrow Medium";
-  src: url("./fonts/GothamXNarrow-Medium.otf") format("opentype");
-}
+
 @font-face {
   font-family: "Gotham Narrow Light";
   src: url("./fonts/GothamXNarrow-Light.otf") format("opentype");
 }
+
+@font-face {
+  font-family: "Gotham Narrow Medium";
+  src: url("./fonts/GothamXNarrow-Medium.otf") format("opentype");
+}
+
 @font-face {
   font-family: "Gotham Narrow Book";
   src: url("./fonts/GothamXNarrow-Book.otf") format("opentype");
 }
+
+@font-face {
+  font-family: 'Gotham Narrow Black';
+  src: url('./fonts/GothamXNarrow-Black-Bold.otf') format("opentype");
+}
+
 @font-face {
   font-family: "Gotham Narrow Bold";
   src: url("./fonts/GothamXNarrow-Bold.otf") format("opentype");
@@ -30,7 +41,7 @@
 
 :root {
   --clr-white: #ffffff;
-  --clr-black: #000000;
+  --clr-black: #212529;
   --clr-gray: #999999;
   --clr-gray-light: #e5e5e5;
   --clr-red: #dd0000;
@@ -48,7 +59,7 @@
 
 html,
 body {
-  max-height: 327px;
+  max-height: 360px;
 }
 
 body {
@@ -60,18 +71,18 @@ body {
 }
 
 .card {
-  --max-width: 1000px;
   --clr-background: var(--clr-gray-light);
-  width: min(var(--max-width), 100vw);
+  max-width:  1000px;
   background-color: var(--clr-background);
   font-size: var(--fs-base);
 }
 
 .card-body {
   --padding-x: 2em;
-  --padding-y: 3.75em;
+  --padding-y: 174px;
   --gap: 0.75em;
-  padding: var(--padding-y) var(--padding-x);
+  padding-left: var(--padding-x);
+  padding-top: var(--padding-y);
   display: flex;
   flex-direction: column;
   gap: var(--gap);
@@ -79,20 +90,23 @@ body {
 
 .search-container {
   position: relative;
+  height: 61.3px;
 }
 
 .search {
-  --font-size: calc(var(--fs-base) * 2.5);
+  --font-size: 55.7px;
+  background-color: var(--clr-red);
   --padding-y: 0;
   --padding-x: 0.25em;
   --icon-size: calc(var(--font-size) * 0.75);
   --input-width: 12ch;
   display: flex;
-  align-items: stretch;
+  align-items: center;
   left: 0;
   position: absolute;
   overflow: hidden;
   z-index: 1;
+  height: 61.3px;
 }
 
 .search-input {
@@ -107,28 +121,8 @@ body {
   width: auto;
   min-width: 4ch;
   max-width: 30ch;
-}
-
-.search-button {
-  font-size: var(--font-size);
-  line-height: 1;
-  cursor: pointer;
-  padding: var(--padding-y) var(--padding-x);
-  background-color: var(--clr-red);
-  color: var(--clr-black);
-  border: none;
-  
-}
-
-.input-warning {
-  position: absolute;
-  top: 103%;
-  left: 6%;
-  color: #dd0000;
-  font-family: "Gotham XNarrow Light";
-  font-weight: 400;
-  font-size: 1.125rem;
-  display: none;
+  max-height: 61.3px;
+  vertical-align: middle;
 }
 
 .vertical-line-bg {
@@ -147,37 +141,54 @@ body {
   height: 80%;
 }
 
-.search-button > svg {
-  display: block;
-  width: var(--icon-size);
-  height: var(--icon-size);
+.search-button {
+  font-size: var(--font-size);
+  line-height: 1;
+  cursor: pointer;
+  padding: var(--padding-y) var(--padding-x);
+  background-color: var(--clr-red);
+  color: var(--clr-black);
+  border: none;
 }
 
 .headline-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
 }
 
 .headline {
   position: absolute;
   z-index: 4;
-  width: 400px;
+  max-width: 624px;
   align-items: stretch;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  top: 10px;
+  top: 85.3px;
 }
 
 .question {
   --max-width: 35ch;
-  font-size: calc((30 / 992) * 100vw);
-  max-width: var(--max-width);
+  font-size: calc((64 / 992) * 100vw);
+  max-width: 624px;
   line-height: 1;
-  text-align: center;
+
   margin-inline: auto;
+}
+
+
+.input-warning {
+  position: absolute;
+  top: 103%;
+  left: 6%;
+  color: #dd0000;
+  font-family: "Gotham XNarrow Light";
+  font-weight: 400;
+  font-size: 1.125rem;
+  display: none;
+}
+
+.search-button > svg {
+  display: block;
+  width: var(--icon-size);
+  height: var(--icon-size);
 }
 
 .subline {
@@ -194,17 +205,16 @@ body {
   --padding-x: calc((6 / 992) * 100vw);
   --padding-y: 3px;
   --icon-size: calc(var(--font-size) * 0.4);
-  font-size: var(--font-size);
+  font-size: 48px;
   padding: var(--padding-y) var(--padding-x);
   color: var(--clr-white);
   background-color: var(--clr-red);
   line-height: 1;
   /* left: 50%; */
   text-align: center;
-  display: flex;
-  align-items: center;
   gap: var(--gap);
-  margin-inline: auto;
+  margin-top: 76px;
+  max-width: 296px;
 }
 
 .today > svg {
@@ -250,6 +260,8 @@ body {
 
 .swatch-label {
   margin-right: 24px;
+  font-size: 21px;
+  padding: 10px;
 }
 
 .swatch-red,
@@ -834,7 +846,7 @@ ul li {
     width: 100vw;
     height: auto;
     max-width: 656px;
-    max-height: 656px;
+    max-height: 369px;
     overflow: hidden;
   }
 
@@ -880,17 +892,16 @@ ul li {
     scale: 0.97; 
   } */
 
-  .card-body {
+  /* .card-body {
     padding: calc((140 / 656) * 100vw) 3em;
     scale: 0.98;
     gap: 0;
-  }
+  } */
 
   .bottom-legend {
     align-items: flex-start;
     justify-content: space-between;
     padding: 0;
-    margin-top: calc((100 / 656) * 100vw);
     gap: 1;
   }
 
