--- a/index.css
+++ b/index.css
@@ -59,7 +59,7 @@
 
 html,
 body {
-  max-height: 360px;
+  max-height: 369px;
 }
 
 body {
@@ -67,13 +67,13 @@ body {
   margin: 0;
   font-family: "Gotham Condensed Book";
   color: var(--clr-black);
-  background-color: var(--clr-background);
+  background: url('./assets/bg.png') no-repeat center center;
+  background-size: cover;
 }
 
 .card {
   --clr-background: var(--clr-gray-light);
   max-width:  1000px;
-  background-color: var(--clr-background);
   font-size: var(--fs-base);
 }
 
@@ -169,7 +169,7 @@ body {
   font-size: calc((64 / 992) * 100vw);
   max-width: 624px;
   line-height: 1;
-
+  color: #FFFAEC;
   margin-inline: auto;
 }
 
@@ -234,6 +234,7 @@ body {
 .bottom-legend {
   display: flex;
   justify-content: space-between;
+  color: white;
 }
 
 .swatches-container {
